--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <img src="MS1.JPG" alt="Marie Sakowicz">
         <div class="header-text">
             <h1>Marie Sakowicz</h1>
-            <p>Ph.D. Student in Human-Centered Computing<br>University of Maryland, Baltimore County<br>
+            <p>Ph.D. Candidate in Human-Centered Computing<br>University of Maryland, Baltimore County<br>
                 Program Manager | Researcher | Innovator<br><br>Advisor: Dr. Foad Hamidi </p>
         </div>
     </header>
@@ -171,9 +171,7 @@
             <h2>My Ph.D. Journey</h2>
             <p> I entered the HCC Ph.D. program in the Spring of 2024 after completing two years in Human-Centered Computing (HCC) M.S. program. 
                 I was drawn to the research and wanted to continue my journey as a Ph.D. student. My current research is on the use of AI-enabled technology 
-                in special education and the impact on accessibility for students with disabilities. I plan to propose late spring or summer of 2025. 
-                This semester I plan to continue to analyze the data collected from my study thus far. I also will conduct a participatory design study 
-                with a special educator to create a lesson generated with AI that is accessible to students with Autism.   
+                in special education and the impact on accessibility for students with disabilities.   
             </p>
             <h2>Dissertation Plans</h2>
             <div class="timeline">
@@ -181,30 +179,29 @@
                     <img src="spring2025.jpg" alt="Spring 2025">
                     <h3>Spring 2025</h3>
                     <ul>
-                        <li>Complete the comprehensive exam and portfolio review.</li>
-                        <li>Continue my research project on the use of Generative AI in Special Education by conducting a participatory design study with special educators on accessible AI-generated lesson plans.</li>
-                        <li>Start writing my proposal document.</li>
-                        <li>Present a talk on my research at N-SEA 2025 (the National Symposium on Equitable AI).</li>
-                        <li>Support the UMBC and Digital Harbor NSF-funded Space for All project.</li>
-                        <li>Finalize my committee members.</li>
-                        <li>Propose late summer 2025.</li>
+                        <li>Completed the comprehensive exam and portfolio review.</li>
+                        <li>Completed a research project on the use of Generative AI in Special Education by conducting a participatory design study with special educators on accessible AI-generated lesson plans.</li>
+                        <li>Presented a talk on my research at N-SEA 2025 (the National Symposium on Equitable AI).</li>
+                        <li>Supported the UMBC and Digital Harbor NSF-funded Space for All project.</li>
+                        
                     </ul>
                 </div>
                 <div class="timeline-box">
                     <img src="fall2025.jpg" alt="Fall 2025">
                     <h3>Fall 2025</h3>
                     <ul>
-                        <li>Continue to conduct research to support my Dissertation and analyze the data collected.</li>
-                        <li>Continue to support the NSF-funded Space for All project.</li>
-                        <li>Submit particapatory design study paper to CHI 
-                        <li>Start writing my Defense.</li>
+                        <li>Sucessfully proposed my disseration September 2025.</li>
+                        <li>Conduct research to support my Dissertation and analyze the data collected.</li>
+                        <li>Support the NSF-funded Space for All project.</li>
+                        <li>Write paper on the use of generative AI for self-advocacy for students with Autism.</li>  
+                        <li>Write my Dissertation Defense.</li>
                     </ul>
                 </div>
                 <div class="timeline-box">
                     <img src="spring2026.jpg" alt="Spring 2026">
                     <h3>Spring 2026</h3>
                     <ul>
-                        <li>Continue research and analysis of data.</li>
+                        <li>Complete Dissertation study.</li>
                         <li>Continue to support the Digital Harbor Space for All project.</li>
                         <li>Finalize my Defense document.</li>
                         <li>Prepare for my Defense.</li>
@@ -217,16 +214,20 @@
             <h2>Publications</h2>
             <ul>
                 <li>
-                    <strong>An Ecosystem of Support: A US State Government-Supported DIY-AT Program for Residents with Disabilities</strong> - Erin Higgins, Marie E Sakowicz, and Foad Hamidi. 2024. In Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '24). Association for Computing Machinery, New York, NY, USA, Article 52, 1–16.
+                    <strong>An Ecosystem of Support: A US State Government-Supported DIY-AT Program for Residents with Disabilities</strong> - Erin Higgins, Marie E Sakowicz, and Foad Hamidi. 2024. <i>In Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '24).</i> Association for Computing Machinery, New York, NY, USA, Article 52, 1–16.
                   <a href="https://doi.org/10.1145/3663548.3675667" target="_blank">https://doi.org/10.1145/3663548.3675667</a></p>
                 </li>
+                <li>
+                    <strong>Exploring the role of generative AI in supporting students with disabilities, through the lens of universal design for learning.</strong> - Marie Sakowicz and Foad Hamidi. 2025. <i>American Journal of STEM Education, 15,</i> 1 -22. https://doi.org/10.32674/yeyaaq64  
             </ul>
             <ul>
          <h3>Papers submitted and under review to conferences</h3>
                 <br>
-                <li><strong>Exploring the Role of Generative AI in Supporting Students with Disabilities, Through the Lens of Universal Design for Learning (UDL) </strong> - Marie Sakowicz and Foad Hamidi. ASSETS 2025.</li>
+                <li><strong>Understanding the Sociocultural Role of Makerspace Infrastructure When Developing Community-based Technology-rich Learning Programs. ACM CHI conference on Human Factors in Computing Systems </strong> - Higgins, E., Posada, J., Sakowicz, M., Kimble-Brown, Q., Coy, A., & Hamidi, F. CHI 2026.</li>
                 <br>
-                <li><strong>ABii at School: Findings from a Long-Term In-School Field Study with a Commercial Robot-Assisted Learning System.</strong>- Lujie Karen Chen, LeaAnne Daughrity, Marie Sakowicz, Foad Hamidi, Karrie Godwin, and Lin Lin Lipsmeyer. ETRD 2025.</li>
+                <li><strong>ABii at School: Findings from a Long-Term In-School Field Study with a Commercial Robot-Assisted Learning System.</strong>- Lujie Karen Chen, LeaAnne Daughrity, Marie Sakowicz, Foad Hamidi, Karrie Godwin, and Lin Lin Lipsmeyer. 2025.<i>ETRD.</i></li>
+                <br>
+                <li><strong>Perspectives of Special Education Teachers on Using AI-enabled Technologies in the Classroom.</strong> Sakowicz, M., & Hamidi, F. 2025. <i>Universal Access in the Information Society.</i></li>
             </ul>
         </section>
 
