--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <strong>Exploring the role of generative AI in supporting students with disabilities, through the lens of universal design for learning.</strong> - Marie Sakowicz and Foad Hamidi. 2025. <i>American Journal of STEM Education, 15,</i> 1 -22. https://doi.org/10.32674/yeyaaq64  
             </ul>
             <ul>
-         <h3>Papers submitted and under review to conferences</h3>
+         <h3>Papers submitted and under review to journals or conferences</h3>
                 <br>
                 <li><strong>Understanding the Sociocultural Role of Makerspace Infrastructure When Developing Community-based Technology-rich Learning Programs. ACM CHI conference on Human Factors in Computing Systems </strong> - Higgins, E., Posada, J., Sakowicz, M., Kimble-Brown, Q., Coy, A., & Hamidi, F. CHI 2026.</li>
                 <br>
